Put the build log in home directory simply because it gets pulled into rat and borks the build